Move switch to its dedicated cell and fix flickering

--- a/css/switch.css
+++ b/css/switch.css
@@ -1,3 +1,10 @@
+.switch-cell {
+  grid-area: bigtext;
+  justify-self: right;
+  background: linear-gradient(to right, rgba(255,255,255,0), rgba(255,255,255,1) 15px);
+  line-height: 20px;
+  padding: 10px 0 0 30px;
+}
 .switch {
   position: relative;
   display: inline-block;
